--- a/BlazorApp3/Client/Pages/Contact.razor
+++ b/BlazorApp3/Client/Pages/Contact.razor
@@ -68,17 +68,18 @@
   </div>
 
 </body>
-@code {
-  private FeedbackMessageModel feedbackMessageModel = new();
-  private string? content;
-   private bool showAlert = false;
-    private void CloseAlert()
-    {
-        showAlert = false;
-    }
-  protected async Task SendFeedbackMessage()
-  {
-    content = await (await _httpClient.PostAsJsonAsync("user/feedback", feedbackMessageModel)).Content.ReadAsStringAsync();
-    showAlert = true;
-  }
+@code{
+private readonly FeedbackMessageModel feedbackMessageModel = new();
+        private string? content;
+        private bool showAlert = false;
+        private void CloseAlert()
+        {
+            showAlert = false;
+        }
+
+        private async Task SendFeedbackMessage()
+        {
+            content = await (await _httpClient.PostAsJsonAsync("user/feedback", feedbackMessageModel)).Content.ReadAsStringAsync();
+            showAlert = true;
+        }
 }
