--- a/BlazorApp3/Client/Pages/ReadFeedBack.razor
+++ b/BlazorApp3/Client/Pages/ReadFeedBack.razor
@@ -120,43 +120,41 @@ else
     </div>
 </body>
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-@code {
-    private List<FeedbackMessageModel> feedbacks = new();
-    private int index = 1;
-
-    protected override async Task OnInitializedAsync()
-    {
-        try
+@code{
+    private readonly List<FeedbackMessageModel> feedbacks = new();
+        private int index = 1;
+        protected override async Task OnInitializedAsync()
         {
+            try
+            {
+                feedbacks.AddRange(await _httpClient.GetFromJsonAsync<List<FeedbackMessageModel>>($"admin/ReadFeedBack/{index}"));
+            }
+            catch (Exception ex)
+            {
+                Console.WriteLine(ex.Message);
+            }
+        }
+
+        private async Task LoadMore()
+        {
+            index++;
             feedbacks.AddRange(await _httpClient.GetFromJsonAsync<List<FeedbackMessageModel>>($"admin/ReadFeedBack/{index}"));
         }
-        catch (Exception ex)
-        {
-            Console.WriteLine(ex.Message);
-        }
-
-    }
-    private async Task LoadMore()
-    {
-        index++;
-        feedbacks.AddRange(await _httpClient.GetFromJsonAsync<List<FeedbackMessageModel>>($"admin/ReadFeedBack/{index}"));
-    }
 }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
