--- a/BlazorApp3/Client/Pages/WatchCustomer.razor
+++ b/BlazorApp3/Client/Pages/WatchCustomer.razor
@@ -30,10 +30,13 @@
 }
 else
 {
-    if (sameDevice)
+    
+        if (sameDevice)
     {
-        <video src="@movieLink" width="1280" height="720" controls @onclick="View"></video>
+        <video src="@movieLink" width="1280" height="720" controls @onplay="View"></video>
     }
+    
+    
 }
 
 @*<div></div>
@@ -56,17 +59,7 @@ else
 <input type="text" @bind=@Acomment>
 
 <button @onclick="@Com">Comment</button>
-
-
-<<<<<<< HEAD
 <div>@content</div>*@
-=======
->>>>>>> 3ca3eec24d4204da857bbc7b33e8054e548137d8
-
-
-
-
-
 
 <head>
     <meta charset="utf-8">
@@ -170,188 +163,174 @@ else
 </body>
 
 
-
-
-
-
-@code {
+@code{
     [Parameter]
-    public string Id { get; set; }
+        public string Id { get; set; }
 
-    private MovieModel movie;
-    private string? movieLink = null;
-    private bool? canWatch;
-    private string Acomment;
-    private string content;
-    private List<CommentModel> commentList = new();
-    private bool showAlert = false;
-    private Severity severity;
-    private bool sameDevice = false;
-    private void CloseAlert()
-    {
-        showAlert = false;
-    }
-    private int index = 0;
-    protected override async Task OnInitializedAsync()
-    {
-
-        var movieTask = Task.Run(async () =>
+        private MovieModel movie;
+        private string? movieLink = null;
+        private bool? canWatch;
+        private string Acomment;
+        private string content;
+        private List<CommentModel> commentList = new();
+        private bool showAlert = false;
+        private Severity severity;
+        private bool sameDevice = false;
+        private bool firstPlay = true;
+        private void CloseAlert()
         {
-            movie = await _httpClient.GetFromJsonAsync<MovieModel>($"Customer/Watch/{Id}");
-        });
-
-        var commentTask = Task.Run(async () =>
-        {
-            commentList = await _httpClient.GetFromJsonAsync<List<CommentModel>>($"Customer/Comment/{Id}/{index}");
-        });
-        var sameDeviceTask = Task.Run(async () =>
-        {
-            sameDevice = (await _httpClient.PostAsJsonAsync<string>("Customer/UserAgent", await JS.InvokeAsync<string>("getUserAgent"))).IsSuccessStatusCode;
-        });
-
-        var canWatchTask = Task.Run(async () =>
-        {
-            canWatch = await _httpClient.GetFromJsonAsync<bool>($"Customer/CanWatch/{Id}");
-            Console.WriteLine("Done");
-        });
-        char[] tokena = { };
-
-        var tokenaTask = Task.Run(async () =>
-        {
-            tokena   =  await _httpClient.GetFromJsonAsync<char[]>("User/GetToken");
-
-        });
-        string token = new string(tokena);       
-
-
-        try
-        {
-            await Task.WhenAll(movieTask, commentTask, sameDeviceTask, canWatchTask, tokenaTask);
-        }
-        catch
-        {
-            content = "Turn off AdBlock";
-            severity = Severity.Error;
-            showAlert = true;
-            return;
+            showAlert = false;
         }
 
-        if (canWatch == true)
+        private int index = 0;
+        protected override async Task OnInitializedAsync()
         {
+            Task? movieTask = Task.Run(async () =>
+            {
+                movie = await _httpClient.GetFromJsonAsync<MovieModel>($"Customer/Watch/{Id}");
+            });
+            Task? commentTask = Task.Run(async () =>
+            {
+                commentList = await _httpClient.GetFromJsonAsync<List<CommentModel>>($"Customer/Comment/{Id}/{index}");
+            });
+            Task? sameDeviceTask = Task.Run(async () =>
+            {
+                sameDevice = (await _httpClient.PostAsJsonAsync<string>("Customer/UserAgent", await JS.InvokeAsync<string>("getUserAgent"))).IsSuccessStatusCode;
+            });
+            Task? canWatchTask = Task.Run(async () =>
+            {
+                canWatch = await _httpClient.GetFromJsonAsync<bool>($"Customer/CanWatch/{Id}");
+                Console.WriteLine("Done");
+            });
+            char[] tokena = { };
+            Task? tokenaTask = Task.Run(async () =>
+            {
+                tokena = await _httpClient.GetFromJsonAsync<char[]>("User/GetToken");
+            });
+            string token = new string(tokena);
             try
             {
-                movieLink = await new FirebaseStorage("movie2-e3c7b.appspot.com", new FirebaseStorageOptions
-                    {
-                        AuthTokenAsyncFactory =
-                    async () => await Task.FromResult(await Task.FromResult(token)),
-                        ThrowOnCancel = true,
-                        HttpClientTimeout =
-                    TimeSpan.FromHours(2)
-                    }).Child(movie.StudioId).Child(movie.MovieId).Child("Movie").GetDownloadUrlAsync();
-            }
-            catch (Exception ex)
-            {
-                content = ex.Message;
-                severity = Severity.Error;
-                showAlert = true;
-
-            }
-        }
-    }
-    private async Task View()
-    {
-
-        await _httpClient.PostAsJsonAsync<string>("Customer/View", Id);
-
-        while (true)
-        {
-            try
-            {
-                sameDevice = (await _httpClient.PostAsJsonAsync<string>("Customer/UserAgent", await
-                JS.InvokeAsync<string>("getUserAgent"))).IsSuccessStatusCode;
+                await Task.WhenAll(movieTask, commentTask, sameDeviceTask, canWatchTask, tokenaTask);
             }
             catch
             {
                 content = "Turn off AdBlock";
-                showAlert = true;
                 severity = Severity.Error;
-                StateHasChanged();
+                showAlert = true;
                 return;
             }
 
-
-            if (!sameDevice)
+            if (canWatch == true)
             {
-                content = "You cannot watch in many Device at the same time Logout then Login to update your last Device";
-                showAlert = true;
-                severity = Severity.Error;
-                StateHasChanged();
+                try
+                {
+                    movieLink = await new FirebaseStorage("movie2-e3c7b.appspot.com", new FirebaseStorageOptions { AuthTokenAsyncFactory = async () => await Task.FromResult(await Task.FromResult(token)), ThrowOnCancel = true, HttpClientTimeout = TimeSpan.FromHours(2) }).Child(movie.StudioId).Child(movie.MovieId).Child("Movie").GetDownloadUrlAsync();
+                }
+                catch (Exception ex)
+                {
+                    content = ex.Message;
+                    severity = Severity.Error;
+                    showAlert = true;
+                }
+            }
+        }
+
+        private async Task View()
+        {
+            if (firstPlay)
+            {
+                await _httpClient.PostAsJsonAsync<string>("Customer/View", Id);
+                firstPlay = false;
             }
 
-            await Task.Delay(60000);
+            while (true)
+            {
+                try
+                {
+                    sameDevice = (await _httpClient.PostAsJsonAsync<string>("Customer/UserAgent", await JS.InvokeAsync<string>("getUserAgent"))).IsSuccessStatusCode;
+                }
+                catch
+                {
+                    content = "Turn off AdBlock";
+                    showAlert = true;
+                    severity = Severity.Error;
+                    StateHasChanged();
+                    return;
+                }
+
+                if (!sameDevice)
+                {
+                    content = "You cannot watch in many Device at the same time Logout then Login to update your last Device";
+                    showAlert = true;
+                    severity = Severity.Error;
+                    StateHasChanged();
+                }
+
+                await Task.Delay(60000);
+            }
         }
 
-    }
-    private async Task Com()
-    {
-        CommentModel up = new CommentModel()
-        { Time = DateTime.UtcNow, MovieId = Id, CommentText = Acomment };
-        var response = (await _httpClient.PostAsJsonAsync<CommentModel>("Customer/Acomment", up));
-        content = await response.Content.ReadAsStringAsync();
-                if (response.IsSuccessStatusCode)
+        private async Task Com()
         {
-            severity = Severity.Success;
+            CommentModel up = new CommentModel()
+            { Time = DateTime.UtcNow, MovieId = Id, CommentText = Acomment };
+            HttpResponseMessage? response = (await _httpClient.PostAsJsonAsync<CommentModel>("Customer/Acomment", up));
+            content = await response.Content.ReadAsStringAsync();
+            if (response.IsSuccessStatusCode)
+            {
+                severity = Severity.Success;
+            }
+            else
+            {
+                severity = Severity.Error;
+            }
+
+            showAlert = true;
+            List<CommentModel> commentListTemp = new();
+            for (int i = 0; i <= index; i++)
+            {
+                commentListTemp.AddRange(await _httpClient.GetFromJsonAsync<List<CommentModel>>($"Customer/Comment/{Id}/{i}"));
+            }
+
+            commentList.Clear();
+            commentList = commentListTemp;
+            StateHasChanged();
         }
-        else
+
+        private async Task AcDisLike(string Id)
         {
-            severity = Severity.Error;
+            await _httpClient.PostAsJsonAsync<string>($"Customer/ac/{Id}", "DisLike");
+            List<CommentModel> commentListTemp = new();
+            for (int i = 0; i <= index; i++)
+            {
+                commentListTemp.AddRange(await _httpClient.GetFromJsonAsync<List<CommentModel>>($"Customer/Comment/{this.Id}/{i}"));
+            }
+
+            commentList.Clear();
+            commentList = commentListTemp;
+            StateHasChanged();
         }
-        showAlert = true;
 
-        List<CommentModel> commentListTemp = new();
-
-        for (int i = 0; i <= index; i++)
+        private async Task AcLike(string Id)
         {
-            commentListTemp.AddRange(await _httpClient.GetFromJsonAsync<List<CommentModel>>($"Customer/Comment/{Id}/{i}"));
+            await _httpClient.PostAsJsonAsync<string>($"Customer/ac/{Id}", "Like");
+            List<CommentModel> commentListTemp = new();
+            for (int i = 0; i <= index; i++)
+            {
+                commentListTemp.AddRange(await _httpClient.GetFromJsonAsync<List<CommentModel>>($"Customer/Comment/{this.Id}/{i}"));
+            }
+
+            commentList.Clear();
+            commentList = commentListTemp;
+            StateHasChanged();
         }
-        commentList.Clear();
-        commentList = commentListTemp;
-        StateHasChanged();
-    }
 
-    private async Task AcDisLike(string Id)
-    {
-        await _httpClient.PostAsJsonAsync<string>($"Customer/ac/{Id}", "DisLike");
-        List<CommentModel> commentListTemp = new();
-
-        for (int i = 0; i <= index; i++)
+        private async Task LoadMore()
         {
-            commentListTemp.AddRange(await _httpClient.GetFromJsonAsync<List<CommentModel>>($"Customer/Comment/{this.Id}/{i}"));
+            index++;
+            commentList.AddRange(await _httpClient.GetFromJsonAsync<List<CommentModel>>($"Customer/Comment/{Id}/{index}"));
         }
-        commentList.Clear();
-        commentList = commentListTemp;
-        StateHasChanged();
-    }
-
-    private async Task AcLike(string Id)
-    {
-        await _httpClient.PostAsJsonAsync<string>($"Customer/ac/{Id}", "Like");
-        List<CommentModel> commentListTemp = new();
-
-        for (int i = 0; i <= index; i++)
-        {
-            commentListTemp.AddRange(await _httpClient.GetFromJsonAsync<List<CommentModel>>($"Customer/Comment/{this.Id}/{i}"));
-        }
-        commentList.Clear();
-        commentList = commentListTemp;
-
-        StateHasChanged();
-    }
-
-    private async Task LoadMore()
-    {
-        index++;
-        commentList.AddRange(await _httpClient.GetFromJsonAsync<List<CommentModel>>($"Customer/Comment/{Id}/{index}"));
-
-    }
 }
+
+
+
