--- a/BlazorApp3/MauiApp2/Shared/NavMenu.razor
+++ b/BlazorApp3/MauiApp2/Shared/NavMenu.razor
@@ -32,7 +32,7 @@
                         <span class="tooltip">Search</span>
                     </li>
                     <li>
-                        <a href="fetchdata">
+                        <a href="home">
                             @*<i class='bx bx-grid-alt'></i>*@
                             <i class='bx bx-home'></i>
                             <span class="links_name">Home</span>
@@ -102,10 +102,10 @@
                             </li>      
                             <li>
                                 <a href="ReadFeedBack">
-                                    <i class='bx bx-movie'></i>
-                                    <span class="links_name">Read Feed Back</span>
+                                    <i class='bx bx-chat'></i>
+                                    <span class="links_name">Feedback Management</span>
                                 </a>
-                                <span class="tooltip">Read Feed Back</span>
+                                <span class="tooltip">Feedback Management</span>
                             </li>  
                         </Authorized>
                     </AuthorizeView>
@@ -114,9 +114,9 @@
                             <li>
                                 <a href="MovieCustomer">
                                     <i class='bx bx-movie-play'></i>
-                                    <span class="links_name">Movie Customer</span>
+                                    <span class="links_name">Movie</span>
                                 </a>
-                                <span class="tooltip">Movie Customer</span>
+                                <span class="tooltip">Movie</span>
                             </li>
 
                             <li>
