--- a/BlazorApp3/Client/Pages/AdminAccountManagement.razor
+++ b/BlazorApp3/Client/Pages/AdminAccountManagement.razor
@@ -172,16 +172,15 @@
 
 </body>
 
+
 @code{
-	[Parameter]
-        public List<AccountManagementModel> accs { get; set; } = new();
-        protected int index = 0;
-        protected string? searchString { get; set; }
-        protected bool isSearch = false;
+	private List<AccountManagementModel> accs { get; set; } = new();
+        private int index = 0;
+        private string? searchString { get; set; }
 
-        protected string sort = null;
-
-        protected async Task NameSortParm()
+        private bool isSearch = false;
+        private string sort = null;
+        private async Task NameSortParm()
         {
             index = 0;
             sort = sort == "name" ? "nameDesc" : "name";
@@ -190,7 +189,7 @@
             searchString = null;
         }
 
-        protected async Task DateSortParm()
+        private async Task DateSortParm()
         {
             index = 0;
             sort = sort == "date" ? "dateDesc" : "date";
@@ -199,7 +198,7 @@
             searchString = null;
         }
 
-        protected async Task EmailSortParm()
+        private async Task EmailSortParm()
         {
             index = 0;
             sort = sort == "email" ? "emailDesc" : "email";
@@ -207,7 +206,8 @@
             isSearch = false;
             searchString = null;
         }
-        protected async Task Search()
+
+        private async Task Search()
         {
             index = 0;
             if (searchString != null)
@@ -220,13 +220,16 @@
                 accs = await _httpClient.GetFromJsonAsync<List<AccountManagementModel>>($"admin/AccountManagement/ / /{index}");
                 isSearch = false;
             }
+
             sort = null;
         }
+
         protected override async Task OnInitializedAsync()
         {
             accs = await _httpClient.GetFromJsonAsync<List<AccountManagementModel>>($"admin/AccountManagement/ / /{index}");
         }
-        protected async Task LoadMore()
+
+        private async Task LoadMore()
         {
             index++;
             if (isSearch)
@@ -241,8 +244,6 @@
             {
                 accs.AddRange(await _httpClient.GetFromJsonAsync<List<AccountManagementModel>>($"admin/AccountManagement/ / /{index}"));
             }
-
         }
 }
-
 
