--- a/BlazorApp3/MauiApp2/Pages/DepositCustomer.razor
+++ b/BlazorApp3/MauiApp2/Pages/DepositCustomer.razor
@@ -44,43 +44,47 @@ else
     <div>@content</div>
     <button @onclick="Recharge">Recharge</button>
 }
-@code {
-    private string content;
-    private double cash = 0;
-    private string clientToken;
-    private string divCSS = "display: none;";
-    private void DivCSS(string divCSS)
-    {
-        this.divCSS = divCSS;
-    }
-    private DotNetObjectReference<DepositCustomer> objRef;
-    private bool doneCash = false;
-    private async Task Recharge()
-    {
-        content = null;
-        doneCash = false;
-        cash = 0;
-        DivCSS("display: none;");
-    }
-    private async Task Cash()
-    {
-        try
+@code{
+       private string content;
+        private double cash = 0;
+        private string clientToken;
+        private string divCSS = "display: none;";
+        private void DivCSS(string divCSS)
         {
-            doneCash = true;
-            clientToken = new string(await _httpClient.GetFromJsonAsync<char[]>("Customer/Deposit"));
-            objRef = DotNetObjectReference.Create(this);
-            await JS.InvokeVoidAsync("Deposit", objRef, clientToken, cash);
-            DivCSS("display: block;");
+            this.divCSS = divCSS;
         }
-        catch (Exception)
+
+        private DotNetObjectReference<DepositCustomer> objRef;
+        private bool doneCash = false;
+        private async Task Recharge()
         {
+            content = null;
+            doneCash = false;
+            cash = 0;
+            DivCSS("display: none;");
         }
-    }
-    [JSInvokable]
-    public async Task Test(string test, string test2, string test3)
-    {
-        var response = await _httpClient.PostAsJsonAsync<List<string>>($"Customer/{test3}", new List<string>() { test, test2 });
-        content = await response.Content.ReadAsStringAsync();
-        StateHasChanged();
-    }
+
+        private async Task Cash()
+        {
+            try
+            {
+                doneCash = true;
+                clientToken = new string(await _httpClient.GetFromJsonAsync<char[]>("Customer/Deposit"));
+                objRef = DotNetObjectReference.Create(this);
+                await JS.InvokeVoidAsync("Deposit", objRef, clientToken, cash);
+                DivCSS("display: block;");
+            }
+            catch (Exception)
+            {
+            }
+        }
+
+        [JSInvokable]
+        public async Task Test(string test, string test2, string test3)
+        {
+            HttpResponseMessage? response = await _httpClient.PostAsJsonAsync<List<string>>($"Customer/{test3}", new List<string>()
+            {test, test2});
+            content = await response.Content.ReadAsStringAsync();
+            StateHasChanged();
+        }
 }
