--- a/BlazorApp3/MauiApp2/Pages/ResetPassword.razor
+++ b/BlazorApp3/MauiApp2/Pages/ResetPassword.razor
@@ -52,28 +52,29 @@
 </div>
 
 
-@code {
-	private readonly ResetPasswordModel resetPasswordModel = new ResetPasswordModel();
-	private string content;
-	    private bool showAlert = false;
-    private Severity severity;
-    private void CloseAlert()
-    {
-        showAlert = false;
-    }
-	private async Task HandleValidSubmit()
-	{
-		HttpResponseMessage response = await _httpClient.PostAsJsonAsync<ResetPasswordModel>("user/resetPassword",
-		resetPasswordModel);
-		content = await response.Content.ReadAsStringAsync();
-		        if (response.IsSuccessStatusCode)
+@code{
+private readonly ResetPasswordModel resetPasswordModel = new ResetPasswordModel();
+        private string content;
+        private bool showAlert = false;
+        private Severity severity;
+        private void CloseAlert()
         {
-            severity = Severity.Success;
+            showAlert = false;
         }
-        else
+
+        private async Task HandleValidSubmit()
         {
-            severity = Severity.Error;
+            HttpResponseMessage response = await _httpClient.PostAsJsonAsync<ResetPasswordModel>("user/resetPassword", resetPasswordModel);
+            content = await response.Content.ReadAsStringAsync();
+            if (response.IsSuccessStatusCode)
+            {
+                severity = Severity.Success;
+            }
+            else
+            {
+                severity = Severity.Error;
+            }
+
+            showAlert = true;
         }
-        showAlert = true;
-	}
 }
